--- a/configs/prod.config.yaml
+++ b/configs/prod.config.yaml
@@ -9,7 +9,7 @@ MasterDB:
   MaxIdle: 5
   MaxActive: 10
   MaxLifetime: 3600
-  AutoMigrate: true
+  AutoMigrate: false
 
 Redis:
   #  Addr: 43.129.24.153:6979
