--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -1,10 +1,10 @@
 services:
-  sider-admin-backend:
+  pet-admin-backend:
     image: registry.gitlab.com/ours.io/wisebase-admin-backend:latest
     restart: always
     container_name: wisebase-admin-backend
     ports:
-      - 8084:8084
+      - 8081:8081
     volumes:
       - /data/wisebase-admin-backend/log:/log
     environment:
