fix: 修改docker-compose.yaml

--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -10,6 +10,4 @@ services:
       APP_MODE: prod
     container_name: pet_app_server
     volumes:
-      - /app/running/log/current.log /current.log
-      - /app/running/configs /configs
-      - /app/running/server /server
+      - /app/running/ /
