--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -10,4 +10,4 @@ services:
       APP_MODE: prod
     container_name: pet_app_server
     volumes:
-      - /app/running/ /
+      - /app/running/:/pet
