--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   pet-admin-backend:
-    image: pet_app:test
+    image: ubuntu:22.04
     network_mode: host
     ipc: host
     restart: always
@@ -10,4 +10,6 @@ services:
       APP_MODE: prod
     container_name: pet_app_server
     volumes:
-      - /app/running/:/pet
+      - /app/running:/pet
+    working_dir: /pet
+    command: ["./server"]
