--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,8 @@
 name: Deploy Pet
 
 on:
-  workflow_dispatch:
+  push:
+    branches: [ main ] # 触发分支
 
 jobs:
   build-and-deploy:
@@ -50,5 +51,5 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             docker stop pet_app_server
-            scp /app/tmp/server /app/running/
+            cp /app/tmp/output/server /app/running/
             docker start pet_app_server
